[project]
name = "lochness"
version = "2.0.1"
description = "Lochness is a Python Tool for downloading and aggregating data from the different sources."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow==3.1.5",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.26.0",
    "blake3>=1.0.7",
    "lamp-core>=2021.10.4",
    "minio>=7.2.18",
    "msal>=1.34.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "sqlalchemy>=1.4.0,<2.0",
]
